Crash in UV Editing after faces display turn off / on #63886

Closed
opened 2019-04-25 19:31:35 +02:00 by Rafal Machalica · 7 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: Intel(R) HD Graphics 530 Intel 4.4.0 - Build 21.20.16.4839

Blender Version
Broken: version: 2.80 (sub 59), branch: blender2.7, commit date: 2019-04-24 22:25, hash: d966c2f0c2
Worked: (optional)

Short description of error
When I try to edit UV with faces display turned off, all mesh disappears. Then, then I click faces display on, whole application closes.

Exact steps for others to reproduce the error

  1. Launch Blender with default scene.
  2. Activate "UV Editing" workspace. Make sure you are in edit mode on the right pane and at least one face is selected.
  3. On the left pane click "Display" and turn off "Faces".
  4. On the left pane select at least one vertex and try to move it with "G" key.
  5. Whole unwrapped mesh disappears (this alone is buggy - expected behavior is: selected vertices are being grabbed, whole mesh is still visible).
  6. On the left pane click "Display" and turn on "Faces".
  7. Blender closes immediately.
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: Intel(R) HD Graphics 530 Intel 4.4.0 - Build 21.20.16.4839 **Blender Version** Broken: version: 2.80 (sub 59), branch: blender2.7, commit date: 2019-04-24 22:25, hash: `d966c2f0c2` Worked: (optional) **Short description of error** When I try to edit UV with faces display turned off, all mesh disappears. Then, then I click faces display on, whole application closes. **Exact steps for others to reproduce the error** 1. Launch Blender with default scene. 2. Activate "UV Editing" workspace. Make sure you are in edit mode on the right pane and at least one face is selected. 3. On the left pane click "Display" and turn off "Faces". 4. On the left pane select at least one vertex and try to move it with "G" key. 5. Whole unwrapped mesh disappears (this alone is buggy - expected behavior is: selected vertices are being grabbed, whole mesh is still visible). 6. On the left pane click "Display" and turn on "Faces". 7. Blender closes immediately.

Added subscriber: @Rafal_M

Added subscriber: @Rafal_M

#63591 was marked as duplicate of this issue

#63591 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-04-26 14:44:53 +02:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555cb10c3c in GPU_indexbuf_add_generic_vert (builder=0x0, v=0) at /home/zed/prog/blender/source/blender/gpu/intern/gpu_element.c:109
109	  assert(builder->data != NULL);
(gdb) bt
- 0  0x000055555cb10c3c in GPU_indexbuf_add_generic_vert (builder=0x0, v=0) at /home/zed/prog/blender/source/blender/gpu/intern/gpu_element.c:109
- 1  0x00005555587672fb in uvedit_fill_buffer_data (rdata=0x7fffd49be908, vbo_area=0x0, vbo_angle=0x0, vbo_fdots_pos=0x0, vbo_fdots_data=0x0, elb_vert=0x0,
    elb_edge=0x0, elb_face=0x7fffffffd310) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4600
#2  0x0000555558768e9f in mesh_create_uvedit_buffers (rdata=0x7fffd49be908, vbo_area=0x0, vbo_angle=0x0, vbo_fdots_pos=0x0, vbo_fdots_data=0x0, ibo_vert=0x0,
    ibo_edge=0x0, ibo_face=0x7fffd109d348) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4773
#3  0x000055555876b849 in DRW_mesh_batch_cache_create_requested (ob=0x7fffe53ca408, me=0x7fffe50eef08, ts=0x7fffeb3f0008, is_paint_mode=false, use_hide=false)
    at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:5289
#4  0x000055555ca30798 in uvedit_get_batches (ob=0x7fffe53ca408, sima=0x7fffe63f2008, ts=0x7fffeb3f0008, faces=0x7fffffffdae0, edges=0x7fffffffdae8,
    verts=0x7fffffffdaf0, facedots=0x7fffffffdaf8) at /home/zed/prog/blender/source/blender/editors/uvedit/uvedit_draw.c:196
#5  0x000055555ca30c70 in draw_uvs (sima=0x7fffe63f2008, scene=0x7fffe63c3008, obedit=0x7fffeb3f0c08, depsgraph=0x7fffdd8fe208)
    at /home/zed/prog/blender/source/blender/editors/uvedit/uvedit_draw.c:296
#6  0x000055555ca31835 in ED_uvedit_draw_main (sima=0x7fffe63f2008, ar=0x7fffe63eb1c8, scene=0x7fffe63c3008, view_layer=0x7fffe62a6e88,
    obedit=0x7fffeb3f0c08, obact=0x7fffeb3f0c08, depsgraph=0x7fffdd8fe208) at /home/zed/prog/blender/source/blender/editors/uvedit/uvedit_draw.c:505
#7  0x0000555558bb9861 in image_main_region_draw (C=0x7fffeb458208, ar=0x7fffe63eb1c8)
    at /home/zed/prog/blender/source/blender/editors/space_image/space_image.c:610
- 8  0x0000555558cc6324 in ED_region_do_draw (C=0x7fffeb458208, ar=0x7fffe63eb1c8) at /home/zed/prog/blender/source/blender/editors/screen/area.c:558
- 9  0x00005555582390ec in wm_draw_window_offscreen (C=0x7fffeb458208, win=0x7fffe6368488, stereo=false)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:596
- 10 0x000055555823966a in wm_draw_window (C=0x7fffeb458208, win=0x7fffe6368488) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:732
- 11 0x0000555558239b76 in wm_draw_update (C=0x7fffeb458208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:895
- 12 0x0000555558235b20 in WM_main (C=0x7fffeb458208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:424
- 13 0x0000555557ba2d34 in main (argc=1, argv=0x7fffffffe088) at /home/zed/prog/blender/source/creator/creator.c:500
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555cb10c3c in GPU_indexbuf_add_generic_vert (builder=0x0, v=0) at /home/zed/prog/blender/source/blender/gpu/intern/gpu_element.c:109 109 assert(builder->data != NULL); (gdb) bt - 0 0x000055555cb10c3c in GPU_indexbuf_add_generic_vert (builder=0x0, v=0) at /home/zed/prog/blender/source/blender/gpu/intern/gpu_element.c:109 - 1 0x00005555587672fb in uvedit_fill_buffer_data (rdata=0x7fffd49be908, vbo_area=0x0, vbo_angle=0x0, vbo_fdots_pos=0x0, vbo_fdots_data=0x0, elb_vert=0x0, elb_edge=0x0, elb_face=0x7fffffffd310) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4600 #2 0x0000555558768e9f in mesh_create_uvedit_buffers (rdata=0x7fffd49be908, vbo_area=0x0, vbo_angle=0x0, vbo_fdots_pos=0x0, vbo_fdots_data=0x0, ibo_vert=0x0, ibo_edge=0x0, ibo_face=0x7fffd109d348) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4773 #3 0x000055555876b849 in DRW_mesh_batch_cache_create_requested (ob=0x7fffe53ca408, me=0x7fffe50eef08, ts=0x7fffeb3f0008, is_paint_mode=false, use_hide=false) at /home/zed/prog/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:5289 #4 0x000055555ca30798 in uvedit_get_batches (ob=0x7fffe53ca408, sima=0x7fffe63f2008, ts=0x7fffeb3f0008, faces=0x7fffffffdae0, edges=0x7fffffffdae8, verts=0x7fffffffdaf0, facedots=0x7fffffffdaf8) at /home/zed/prog/blender/source/blender/editors/uvedit/uvedit_draw.c:196 #5 0x000055555ca30c70 in draw_uvs (sima=0x7fffe63f2008, scene=0x7fffe63c3008, obedit=0x7fffeb3f0c08, depsgraph=0x7fffdd8fe208) at /home/zed/prog/blender/source/blender/editors/uvedit/uvedit_draw.c:296 #6 0x000055555ca31835 in ED_uvedit_draw_main (sima=0x7fffe63f2008, ar=0x7fffe63eb1c8, scene=0x7fffe63c3008, view_layer=0x7fffe62a6e88, obedit=0x7fffeb3f0c08, obact=0x7fffeb3f0c08, depsgraph=0x7fffdd8fe208) at /home/zed/prog/blender/source/blender/editors/uvedit/uvedit_draw.c:505 #7 0x0000555558bb9861 in image_main_region_draw (C=0x7fffeb458208, ar=0x7fffe63eb1c8) at /home/zed/prog/blender/source/blender/editors/space_image/space_image.c:610 - 8 0x0000555558cc6324 in ED_region_do_draw (C=0x7fffeb458208, ar=0x7fffe63eb1c8) at /home/zed/prog/blender/source/blender/editors/screen/area.c:558 - 9 0x00005555582390ec in wm_draw_window_offscreen (C=0x7fffeb458208, win=0x7fffe6368488, stereo=false) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:596 - 10 0x000055555823966a in wm_draw_window (C=0x7fffeb458208, win=0x7fffe6368488) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:732 - 11 0x0000555558239b76 in wm_draw_update (C=0x7fffeb458208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_draw.c:895 - 12 0x0000555558235b20 in WM_main (C=0x7fffeb458208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:424 - 13 0x0000555557ba2d34 in main (argc=1, argv=0x7fffffffe088) at /home/zed/prog/blender/source/creator/creator.c:500 ```

This issue was referenced by 8192bcd7c1

This issue was referenced by 8192bcd7c19d41a1706fd31466cdab17a167aaf3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @zukson, @fclem, @rjg

Added subscribers: @zukson, @fclem, @rjg
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63886
No description provided.