Fix T63886 Crash in UV Editing after faces display turn off / on

This patch also improve cache locality of the IBO filling. I did not benchmark if it made
any difference.